flapivor/tests/tests-m3/hopix/typechecker/bad/local1.hopix
val test : int =
  val x : int = (
    val z : int -> int = \(x : int) => x + 1;
    val u : int = z (true);
    u
  );
  x